--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Chris">
-    <meta name="description" content="New Wave Recovery is a combination of Sober Living housing opportunities, IOP, PHP, Detox and Residential" />
+    <meta name="description" content="New Wave Recovery is a combination of Sober Living housing opportunities, IOP, PHP, Detox and Residential.">
+    <meta name="keywords" content="
+    New Wave Recovery, 
+    treatment-resistant 
+    depression, 
+    treatment-resistant ocd, 
+    stimulation, 
+    therapy, 
+    Sad,
+    Miserable,
+    Unhappy,
+    Irritable,
+    Overwhelmed,
+    Guilty,
+    Frustrated,
+    Lacking in Confidence,
+    Recovery,
+    Sober,
+    Antidepressant,
+    Anxiety,
+    Anxiety disorder,
+    Bipolar disorder,
+    Dysphoric Mood,
+    Dysthymia,
+    Major depression,
+    Major depressive disorder,
+    Depression Treatment,
+    Mania,
+    Mood stabilizers,
+    Neurotransmitter,
+    Panic Attack,
+    Psychiatrist,
+    Psychotherapy,
+    Substance Disorder,
+    Low Self esteem,
+    Loneliness,
+    Social Isolation,
+    Hopelessness,
+    Addiction,
+    Treatment,
+    Left Dorsolateral Prefrontal cortex,
+    Brain chemistry,
+    Non-invasive,
+    Cortical Mapping,
+    Motor threshold,
+    90867,
+    90868,
+    90869,
+    Therapeutic Repetitive Transcranial Magnetic Stimulation,
+    FDA Approved,
+    Cutting edge,
+    OCD,
+    State of the Art technology,
+    Cognitive Neuroscience,
+    Rehabilitation,
+    Cigarette Addiction,
+    Vape addiction,
+    Electromagnetic coil,
+    Electromagnetic Pulse,
+    Office Ally,
+    Celexa,
+    Lexapro,
+    Prozac,
+    Paxil,
+    Zoloft,
+    Pristiq,
+    Cymbalta,
+    Effexor,
+    Wellbutrin,    
+    Trazodone,
+    PHQ-9,
+    GAD-7">
+
     <meta name="keywords" content="Sober Living, Sober, Rehab, Detox, Job Assistance, Drug Addiction, Addiction" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>New Wave Recovery</title>
+
+    <title>
+    
+      New Wave Recovery | Sober Living | Residential | Detox
+    
+    </title>    
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
